GNOME Bugzilla – Bug 744140
Emit a signal if a stream gets updated
Last modified: 2015-10-05 13:37:20 UTC
Created attachment 296343 [details] [review] Emit a signal for stream changed Currently there's only "stream-added" and "stream-removed" but no "stream-changed" signal emitted. This results in details being outdated (e.g. the currently played song in Rhythmbox). I attached a small proof of concept, please tell me what you think.
Review of attachment 296343 [details] [review]: That looks fine, but that's not hooked up anywhere. Is there a companion patch?
No, not within shell or gvm. I came across this issue maintaining a shell extension (Shell Volume Mixer). This patch lets me bind to that event and update labels, e.g. Default shell implementation doesn't display stream information (guess this hasn't changed with 3.18), so there was no need to use it anywhere.
(In reply to Alex Hofbauer from comment #2) > No, not within shell or gvm. > > I came across this issue maintaining a shell extension (Shell Volume Mixer). > This patch lets me bind to that event and update labels, e.g. > > Default shell implementation doesn't display stream information (guess this > hasn't changed with 3.18), so there was no need to use it anywhere. gnome-control-center's sound panel, to update the apps tab?
Might be a use-case. As far as I can see it doesn't display detailed stream information atm.
So close as WONTFIX, if it won't be used?
At least one shell extension will implement it as currently outdated information is displayed with no way of getting updates. Would it hurt to propagate that signal? Displaying stream details in sound panel might be useful too. Don't know about the implications regarding HIG though.
It doesn't hurt, but I'd like to see code use it before merging it.
I wanted to implement updates in shell volume mixer already for 3.16, commit is there [1], waiting for the signal to be implemented. Please, don't tell me external implementations don't count, this would be very disappointing. There's no other way (afaik) of getting stream updates in shell extensions. [1] https://github.com/aleho/gnome-shell-volume-mixer/commit/0aa36b0a35bf5291e825a7c2dee2f0d7ac356faf
(In reply to Alex Hofbauer from comment #8) > I wanted to implement updates in shell volume mixer already for 3.16, commit > is there [1], waiting for the signal to be implemented. I don't understand what this does, and I don't know what your extension does either.
Summary: It displays a list of stream control sliders, allowing to change their volume. Some media players add stream details, e.g. the currently displayed song. As soon as this information is updated by the application, the next song title would be displayed. Problem: There's no stream-added signal emitted for already existing streams and there's also no stream-changed signal. The extension is never notified of changes, there's never an update to the stream details.