Emit a signal for stream-changed

https://bugzilla.gnome.org/show_bug.cgi?id=744140